--- a/PasswordGenerator/nbproject/private/private.properties
+++ b/PasswordGenerator/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Joseph\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
+user.properties.file=/Users/josephmiddleton/Library/Application Support/NetBeans/8.0/build.properties
