added a ruby script for compiling and running on Windows(probably works for Linux/Mac as well(untested)

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
 /testfile
-
-/.classpath
-
-/.project
-/build/
-/dist/
-
-/nbproject/
-
-/.settings/
-password-manager/bin/
+/password-manager/src/CompileRun.rb
+/password-manager/build/
