--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-/testfile
+/password-manager/testfile
 /password-manager/src/CompileRun.rb
 /password-manager/build/
+/password-manager/target/
+/password-manager/src/test/
