--- a/password-manager/pom.xml
+++ b/password-manager/pom.xml
@@ -40,6 +40,48 @@
           <mainClass>passwordgenerator.view.MainView</mainClass>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <archive>
+            <index>true</index>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>passwordgenerator.view.MainView</mainClass>
+            </manifest>
+            <manifestEntries>
+              <mode>development</mode>
+              <url>${project.url}</url>
+              <key>value</key>
+            </manifestEntries>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2-beta-4</version>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+           <manifest>
+              <mainClass>passwordgenerator.view.MainView</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+        <executions>
+          <execution>
+           <phase>package</phase>
+           <goals>
+              <goal>single</goal>
+           </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
