--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/password-manager/testfile
-/password-manager/build/
-/password-manager/target/
-/password-manager/src/test/
-/password-manager/src/main/java/passwordgenerator/*/*.class
+testfile
+build/
+target/
+src/test/
+src/main/java/passwordgenerator/*/*.class
